Fixed description line spacing.

--- a/src/modules/Header.css
+++ b/src/modules/Header.css
@@ -119,7 +119,7 @@
     font-size           : 1.5vw;
     color               : rgba(0, 0, 0, 1.0);
     text-align          : justify;
-    line-height         : 28.0px;
+    line-height         : 2.5vw;
   }
 
   .Header .newicon {
